crates/ddlog-syntax/tests/validation/fail/missing_function_arg_commas.rast
ROOT@0..80
  COMMENT@0..50 "// kind:item validate ..."
  WHITESPACE@50..51 "\n"
  FUNCTION_DEF@51..80
    FN_TOKEN@51..53 "fn"
    WHITESPACE@53..54 " "
    IDENT@54..57 "foo"
    FUNCTION_ARGS@57..76
      L_PAREN@57..58 "("
      FUNCTION_ARG@58..67
        VAR_REF@58..61
          IDENT@58..61 "foo"
        COLON@61..62 ":"
        WHITESPACE@62..63 " "
        TYPE@63..67
          GENERIC_TYPE@63..66
            IDENT@63..66 "Bar"
          WHITESPACE@66..67 " "
      FUNCTION_ARG@67..75
        VAR_REF@67..70
          IDENT@67..70 "bar"
        COLON@70..71 ":"
        WHITESPACE@71..72 " "
        TYPE@72..75
          GENERIC_TYPE@72..75
            IDENT@72..75 "Baz"
      R_PAREN@75..76 ")"
    WHITESPACE@76..77 " "
    BLOCK@77..79
      L_CURLY@77..78 "{"
      R_CURLY@78..79 "}"
    WHITESPACE@79..80 "\n"
--
Error: expected an identifier
   ,-[validation/fail/missing_function_arg_commas.dl:2:7]
   |
 2 | fn foo(foo: Bar bar: Baz) {}
   :       |  
   :       `-- expected an identifier
---'
--
// kind:item validate:true pass:false ignore:false
fn foo(foo: Bar bar: Baz) {}
